# revup

./: .coverage  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  bar  pylintrc  pyproject.toml  setup.cfg  setup.py  treh  version.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bazel.yml  codeql-analysis.yml  makefile.yml  tests.yaml
docs/: amend.md  cherry-pick.md  config.md  reset.md  restack.md  revup.md  upload.md
docs/images/: generate_gifs.sh  tutorial_1.yml  tutorial_2.yml  tutorial_3.yml
revup/: __init__.py  __main__.py  amend.py  cherry_pick.py  completion.py  config.py  forge.py  forge_utils.py  git.py  github.py  github_real.py  github_utils.py  graphite.py  logs.py  reset.py  restack.py  revup.py  shell.py  toolkit.py  topic_stack.py  types.py  upload.py  version.py
revup/completions/: revup.bash  revup.fish  revup.zsh
revup/github/: base_client.py  endpoint.py  github.py  graphql.py
revup/github/graphql_client/: __init__.py  add_assignees.py  add_comment.py  add_labels.py  client.py  convert_to_draft.py  create_pull_request.py  enums.py  get_assignable_users.py  get_label.py  get_pr_by_number.py  get_pull_request.py  get_team.py  input_types.py  mark_ready_for_review.py  request_reviews.py  update_issue_comment.py  update_pull_request.py
revup/github/queries/: add_assignees.graphql  add_comment.graphql  add_labels.graphql  convert_to_draft.graphql  create_pull_request.graphql  get_assignable_users.graphql  get_label.graphql  get_pr_by_number.graphql  get_pull_request.graphql  get_team.graphql  mark_ready_for_review.graphql  request_reviews.graphql  update_issue_comment.graphql  update_pull_request.graphql
revup/github/schema/: github.graphql
scripts/: analyze_prs.py  build_manpage.sh  fix_codegen_imports.py
tests/: fake_forge.py  git_env.py  test_amend.py  test_completions.py  test_config.py  test_github.py  test_gpg.py  test_restack.py  test_tools.py  test_upload.py  test_version_parity.py
