module(
    name = "revup",
    # Keep this in sync with revup/version.py REVUP_VERSION. MODULE.bazel does
    # not support `load`, so the value cannot be imported from version.bzl.
    version = "0.4.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_m4", version = "0.3.bcr.1")
bazel_dep(name = "rules_python", version = "0.36.0")
bazel_dep(name = "rules_shell", version = "0.3.0")

# Pandoc isn't on BCR, so we fetch the official prebuilt binaries directly.
# One http_archive per (os, arch); BUILD.bazel selects the right one.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

PANDOC_VERSION = "3.10"

_PANDOC_BUILD = """\
exports_files(["bin/pandoc"], visibility = ["//visibility:public"])
"""

_PANDOC_WINDOWS_BUILD = """\
exports_files(["pandoc.exe"], visibility = ["//visibility:public"])
"""

http_archive(
    name = "pandoc_linux_amd64",
    url = "https://github.com/jgm/pandoc/releases/download/{v}/pandoc-{v}-linux-amd64.tar.gz".format(v = PANDOC_VERSION),
    sha256 = "e0f8af62d0f267d22baa5bcefe6d5dda3a097ccc60de794b759fe03159923244",
    strip_prefix = "pandoc-{}".format(PANDOC_VERSION),
    build_file_content = _PANDOC_BUILD,
)

http_archive(
    name = "pandoc_linux_arm64",
    url = "https://github.com/jgm/pandoc/releases/download/{v}/pandoc-{v}-linux-arm64.tar.gz".format(v = PANDOC_VERSION),
    sha256 = "55413dfb0c1aec861641fe858f1f73e84848f3db497b1c0c02e62887ea76f4a4",
    strip_prefix = "pandoc-{}".format(PANDOC_VERSION),
    build_file_content = _PANDOC_BUILD,
)

http_archive(
    name = "pandoc_macos_amd64",
    url = "https://github.com/jgm/pandoc/releases/download/{v}/pandoc-{v}-x86_64-macOS.zip".format(v = PANDOC_VERSION),
    sha256 = "6334f4d9af7c9e37e761dfad56fa5507685f6d29724ebf31c4be6d5c654a3161",
    strip_prefix = "pandoc-{}-x86_64".format(PANDOC_VERSION),
    build_file_content = _PANDOC_BUILD,
)

http_archive(
    name = "pandoc_macos_arm64",
    url = "https://github.com/jgm/pandoc/releases/download/{v}/pandoc-{v}-arm64-macOS.zip".format(v = PANDOC_VERSION),
    sha256 = "d9cad01d96ae774a0dc8c8c45bb1ad3e4c5ff2cc2e24f45958f5f9b7974aee34",
    strip_prefix = "pandoc-{}-arm64".format(PANDOC_VERSION),
    build_file_content = _PANDOC_BUILD,
)

http_archive(
    name = "pandoc_windows_amd64",
    url = "https://github.com/jgm/pandoc/releases/download/{v}/pandoc-{v}-windows-x86_64.zip".format(v = PANDOC_VERSION),
    sha256 = "bb808d00fd58762299d64582a9b4c3e4b106cd929e62c5f19bcdcb496f1e54ae",
    strip_prefix = "pandoc-{}".format(PANDOC_VERSION),
    build_file_content = _PANDOC_WINDOWS_BUILD,
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
