[metadata]
name = revup
version = attr: revup.__version__
author = Jerry Zhang
author_email = jerry@skydio.com
description = Revolutionary commit-based code review and workflow tools for git/github
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skydio/revup
project_urls =
    Bug Tracker = https://github.com/skydio/revup/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control
    Topic :: Software Development :: Version Control :: Git
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Typing :: Typed

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp
    rich
include_package_data=True

[options.packages.find]
where = .

[options.package_data]
* = *.1.gz

[options.entry_points]
console_scripts =
    revup = revup:__main__

[mypy]
python_version = 3.8
warn_unused_configs = True
disallow_untyped_defs = True
mypy_path =
    .
