[metadata]
name = revup
version = attr: revup.__version__
author = Jerry Zhang
author_email = jerry@skydio.com
description = Revolutionary github tools. Effortlessly create multiple branches and pull requests.
keywords = github python git workflow version-control python3 developer-tools code-review pull-requests developers developer-productivity stacked-diffs
license = MIT
license_files =
    LICENSE
long_description_content_type = text/markdown
url = https://github.com/skydio/revup
project_urls =
    Source = https://github.com/skydio/revup
    Bug Tracker = https://github.com/skydio/revup/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control
    Topic :: Software Development :: Version Control :: Git
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Typing :: Typed

[options]
package_dir =
     = .
packages =
    revup
python_requires = >=3.8
install_requires =
    aiohttp
    async_lru
    attrs
    requests
    rich
    multidict
    yarl
    async_timeout
    charset_normalizer
    aiosignal
setup_requires = 
    setuptools
    wheel
    pip
include_package_data=True

[options.extras_require]
dev =
    black==24.1.1
    isort
    pylint==3.2.7
    mypy==1.13.0
    build
    twine
    pytest
    pytest-mock

[options.packages.find]
where = .

[options.package_data]
revup = man1/*.1.gz

[options.entry_points]
console_scripts =
    revup = revup.__main__:_main

[mypy]
python_version = 3.8
warn_unused_configs = True
disallow_untyped_defs = True
mypy_path =
    .
